Start of upgrading bindings. (#82)
This provides functionality for supporting multiple bindings in the manifest definition.

Co-authored-by: Kevin McDermott <bigkevmcd@gmail.com>

--- a/pkg/pipelines/config/testdata/example1.yaml
+++ b/pkg/pipelines/config/testdata/example1.yaml
@@ -7,7 +7,8 @@ environments:
     pipelines:
       integration:
         template: dev-ci-template
-        binding: dev-ci-binding
+        bindings:
+          - dev-ci-binding
     apps:
       - name: my-app-1
         services:
