Remove logo / mentions of Red Hat & IBM
Removes the mentions of Red Hat & IBM

/kind documentation

Signed-off-by: Charlie Drage <charlie@charliedrage.com>

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ doks:
             logo:
                 text: odo
                 image:
-            copyright: Copyright &copy; 2020 Red Hat, Inc.
+            copyright: Apache License Version 2.0
         social_list:
             - network_name: github
               profile_url: 'https://github.com/openshift/odo'
