--- a/.travis.yml
+++ b/.travis.yml
@@ -135,7 +135,7 @@ jobs:
         - ./scripts/oc-cluster.sh
         - make bin
         - sudo cp odo /usr/bin
-        - travis_wait test-cmd-docker-devfile-url-pushtarget
+        - travis_wait make test-cmd-docker-devfile-url-pushtarget
         # These tests need cluster login as they will be interacting with a Kube environment
         - odo login -u developer
         - travis_wait make test-cmd-devfile-catalog
