Watch test feedback 2
Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -191,3 +191,4 @@ jobs:
         - sudo cp odo /usr/bin
         - export KUBERNETES=true
         - travis_wait make test-cmd-devfile-catalog
+        - travis_wait make test-cmd-devfile-watch
