Add devfile command flags to watch (#3075)
* save non default devfile cmd in env.yaml for push and watch

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Add and update tests for envinfo

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Update watch test to incl new watch param

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* watch integration test

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Display msg when devfile commands are changed via odo push

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Change Logic for watch flag + feedback 1

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Update Watch tests with feedback

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* disable watch test on kube since we now use oc

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Watch test feedback 2

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -162,11 +162,12 @@ jobs:
     
     - <<: *base-test
       stage: test
-      name: "docker devfile push, url, catalog, delete command integration tests"
+      name: "docker devfile push, watch, catalog and delete command integration tests"
       script:
         - make bin
         - sudo cp odo /usr/bin
         - travis_wait make test-cmd-docker-devfile-push
+        - travis_wait make test-cmd-docker-devfile-watch
         - travis_wait make test-cmd-docker-devfile-catalog
         - travis_wait make test-cmd-docker-devfile-delete
         - travis_wait make test-cmd-docker-devfile-url
