Adding script for ci build info

--- a/openshift-ci/build-root/Dockerfile
+++ b/openshift-ci/build-root/Dockerfile
@@ -19,5 +19,5 @@ RUN rvm requirements run \
 
 RUN ruby --version
 
-RUN gem install travis --no-document
+RUN gem install travis --pre --no-document
 
