--- a/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
@@ -1,53 +1,52 @@
-apiVersion: 1.0.0
+schemaVersion: 2.0.0
 metadata:
   name: test-devfile
 projects:
-  -
-    name: nodejs-web-app
-    source:
-      type: git
+  - name: nodejs-web-app
+    git:
       location: "https://github.com/che-samples/web-nodejs-sample.git"
 components:
-  - type: dockerimage
-    image: quay.io/eclipse/che-nodejs10-ubi:nightly
-    endpoints:
-      - name: "3000/tcp"
-        port: 3000
-    alias: runtime
-    env:
-      - name: FOO
-        value: "bar"
-    memoryLimit: 1024Mi
-    mountSources: true
-    volumes:
-      - name: myvol
-        containerPath: /data
-  - type: dockerimage
-    image: quay.io/eclipse/che-nodejs10-ubi:nightly
-    alias: runtime2
-    memoryLimit: 1024Mi
-    mountSources: false
-    volumes:
-      - name: myvol
-        containerPath: /data
-      - name: myvol2
-        containerPath: /data2
+  - container:
+      name: runtime
+      image: quay.io/eclipse/che-nodejs10-ubi:nightly
+      memoryLimit: 1024Mi
+      env:
+        - name: FOO
+          value: "bar"
+      endpoints:
+        - name: "3000/tcp"
+          configuration:
+            protocol: tcp
+            scheme: http
+          targetPort: 3000
+      mountSources: true
+      volumeMounts:
+        - name: myvol
+          path: /data
+  - container:
+      name: runtime2
+      image: quay.io/eclipse/che-nodejs10-ubi:nightly
+      memoryLimit: 1024Mi
+      mountSources: false
+      volumeMounts:
+        - name: myvol
+          path: /data
+        - name: myvol2
+          path: /data2
 commands:
-  - name: devInit
-    actions:
-      - type: exec
-        component: runtime
-        command: "echo init >> myfile-init.log"
-        workdir: /data
-  - name: devBuild
-    actions:
-      - type: exec
-        component: runtime
-        command: "echo hello >> myfile.log"
-        workdir: /data
-  - name: devRun
-    actions:
-      - type: exec
-        component: runtime2
-        command: "cat myfile.log"
-        workdir: /data
+  - exec:
+      id: devbuild
+      component: runtime
+      commandLine: "echo hello >> myfile.log"
+      workingDir: /data
+      group:
+        kind: build
+        isDefault: true
+  - exec:
+      id: devrun
+      component: runtime2
+      commandLine: "cat myfile.log"
+      workingDir: /data
+      group:
+        kind: run
+        isDefault: true
