--- a/tests/examples/source/devfiles/springboot/devfile-init-without-build.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile-init-without-build.yaml
@@ -3,18 +3,15 @@ apiVersion: 1.0.0
 metadata:
   generateName: java-spring-boot
 projects:
-  -
-    name: springbootproject
+  - name: springbootproject
     source:
       type: git
       location: "https://github.com/maysunfaisal/springboot.git"
 components:
-  -
-    type: chePlugin
+  - type: chePlugin
     id: redhat/java/latest
     memoryLimit: 1512Mi
-  -
-    type: dockerimage
+  - type: dockerimage
     image: maysunfaisal/springbootbuild
     alias: tools
     memoryLimit: 768Mi
@@ -24,8 +21,7 @@ components:
     volumes:
       - name: springbootpvc
         containerPath: /data
-  -
-    type: dockerimage
+  - type: dockerimage
     image: maysunfaisal/springbootruntime
     alias: runtime
     memoryLimit: 768Mi
@@ -37,19 +33,15 @@ components:
       - name: springbootpvc
         containerPath: /data
 commands:
-  - 
-    name: devInit
+  - name: devInit
     actions:
-      - 
-        type: exec
+      - type: exec
         component: tools
         command: "echo hello; touch /data/afile.txt"
         workdir: /projects/springbootproject
-  -
-    name: devRun
+  - name: devRun
     actions:
-      -
-        type: exec
+      - type: exec
         component: runtime
         command: "/artifacts/bin/start-server.sh"
         workdir: /
