Move CICD/ArgoCD out out Environments folder to "Config" (#108)
* Move CICD/ArgoCD out from Environments folder to a new folder "Config".    This will allow script to kubectl apply to all Environments more easily.
* Update Pipeline Task to execute a script to run kubectl apply/dry-run to all environments
* Update "manifest build" to generate kustomize resource references from apps to environments if ArgoCD is present.  Otherwise, resource references from environment to apps are generated.

--- a/pkg/pipelines/config/testdata/example1.yaml
+++ b/pkg/pipelines/config/testdata/example1.yaml
@@ -1,3 +1,8 @@
+config:
+  argocd:
+    namespace: test-argocd
+  pipelines:
+    name: test-pipelines
 environments:
   - name: development
     services:
