--- a/.travis.yml
+++ b/.travis.yml
@@ -138,6 +138,7 @@ jobs:
         - travis_wait make test-cmd-devfile-watch
         - travis_wait make test-cmd-devfile-delete
         - travis_wait make test-cmd-devfile-registry
+        - travis_wait make test-cmd-devfile-test
         - odo logout
 
     - <<: *base-test
@@ -156,7 +157,7 @@ jobs:
     
     - <<: *base-test
       stage: test
-      name: "docker devfile push, watch, catalog and delete command integration tests"
+      name: "docker devfile push, watch, test, catalog and delete command integration tests"
       script:
         - make bin
         - sudo cp odo /usr/bin
@@ -165,11 +166,12 @@ jobs:
         - travis_wait make test-cmd-docker-devfile-catalog
         - travis_wait make test-cmd-docker-devfile-delete
         - travis_wait make test-cmd-docker-devfile-url
+        - travis_wait make test-cmd-docker-devfile-test
 
     # Run devfile integration test on Kubernetes cluster    
     - <<: *base-test
       stage: test
-      name: "devfile catalog, watch, push, debug, delete and create command integration tests on kubernetes cluster"
+      name: "devfile catalog, url, test, watch, push, debug, delete and create command integration tests on kubernetes cluster"
       env:
         - MINIKUBE_WANTUPDATENOTIFICATION=false
         - MINIKUBE_WANTREPORTERRORPROMPT=false
@@ -198,3 +200,5 @@ jobs:
         - travis_wait make test-cmd-devfile-debug
         - travis_wait make test-cmd-devfile-delete
         - travis_wait make test-cmd-devfile-create
+        - travis_wait make test-cmd-devfile-url
+        - travis_wait make test-cmd-devfile-test
