add wwhrd check execption for knative.dev/pkg/test/...

--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -38,3 +38,5 @@ exceptions:
   - github.com/golang/protobuf/...
   # MIT licence - wwhrd is not detecting it correctly
   - sigs.k8s.io/yaml/...
+  # Apache License 2.0 - wwhrd is not detecting it correctly
+  - knative.dev/pkg/test/...
