--- a/tests/examples/source/devfiles/nodejs/devfile-no-endpoints.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-no-endpoints.yaml
@@ -2,29 +2,29 @@ schemaVersion: 2.0.0
 metadata:
   name: test-devfile
 projects:
-  - name: nodejs-web-app
+  - name: nodejs-starter
     git:
-      location: "https://github.com/che-samples/web-nodejs-sample.git"
+      location: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
   - container:
       name: runtime
-      image: quay.io/eclipse/che-nodejs10-ubi:nightly
+      image: registry.access.redhat.com/ubi8/nodejs-12:1-36
       memoryLimit: 1024Mi
       mountSources: true
 commands:
   - exec:
       id: devbuild
       component: runtime
-      commandLine: "npm install"
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-web-app/app
+      commandLine: npm install
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: build
         isDefault: true
   - exec:
       id: devrun
       component: runtime
-      commandLine: "nodemon app.js"
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-web-app/app
+      commandLine: npm start
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: run
         isDefault: true
