Update Node devfile tests (#3459)
* Update Node test devfile

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Update node test template check in test

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* resolved devfile debug tests

* revert devfile vol changes

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* removed unnecessary git clones

* resolved serial debug test

* resolved failing docker test

Co-authored-by: Girish Ramnani <gramnani@redhat.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
@@ -2,7 +2,7 @@ schemaVersion: 2.0.0
 metadata:
   name: test-devfile
 projects:
-  - name: nodejs-web-app
+  - name: nodejs-starter
     git:
       location: "https://github.com/che-samples/web-nodejs-sample.git"
 components:
