--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,7 @@ jobs:
       # scenario of docker devfile url testing needs only Kube config file. So the test has been
       # added here just to make sure docker devfile url command test gets a proper kube config file.
       # without creating a separate OpenShift cluster.
-      name: "devfile catalog, create, push, delete, registry and docker devfile url command integration tests"
+      name: "devfile catalog, create, push, delete, registry, log and docker devfile url command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make bin
@@ -138,6 +138,7 @@ jobs:
         - travis_wait make test-cmd-devfile-watch
         - travis_wait make test-cmd-devfile-delete
         - travis_wait make test-cmd-devfile-registry
+        - travis_wait make test-cmd-devfile-log
         - odo logout
 
     - <<: *base-test
@@ -169,7 +170,7 @@ jobs:
     # Run devfile integration test on Kubernetes cluster    
     - <<: *base-test
       stage: test
-      name: "devfile catalog, watch, push, debug, delete and create command integration tests on kubernetes cluster"
+      name: "devfile catalog, watch, push, debug, delete, log and create command integration tests on kubernetes cluster"
       env:
         - MINIKUBE_WANTUPDATENOTIFICATION=false
         - MINIKUBE_WANTREPORTERRORPROMPT=false
@@ -198,3 +199,4 @@ jobs:
         - travis_wait make test-cmd-devfile-debug
         - travis_wait make test-cmd-devfile-delete
         - travis_wait make test-cmd-devfile-create
+        - travis_wait make test-cmd-devfile-log
