Fixed minor bug and tests, added some comments

--- a/tests/examples/source/devfiles/nodejs/devfile-with-post-start.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-post-start.yaml
@@ -36,7 +36,7 @@ commands:
   - exec:
       id: secondPostStart
       commandLine: echo I am also a PostStart
-      component: tools
+      component: runtime
       workingDir: ${CHE_PROJECTS_ROOT}/
   - exec:
       id: download dependencies
