Fixed post-start test devfile

--- a/tests/examples/source/devfiles/nodejs/devfile-with-post-start.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-post-start.yaml
@@ -1,58 +1,69 @@
-schemaVersion: "2.0.0"
+schemaVersion: 2.0.0
 metadata:
   name: test-devfile
 projects:
-  - name: nodejs-web-app
-    git: 
-      location: "https://github.com/che-samples/web-nodejs-sample.git"
+  - name: nodejs-starter
+    git:
+      location: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
   - container:
+      name: runtime
       image: quay.io/eclipse/che-nodejs10-ubi:nightly
-      mountSources: true
-      name: "runtime"
       memoryLimit: 1024Mi
-      env:
-      - name: FOO
-        value: "bar"
       endpoints:
-        - name: '3000/tcp'
-          targetPort: 3000
-          # odo not using currently, added to validate JSON Schema
+        - name: "3000/tcp"
           configuration:
             protocol: tcp
             scheme: http
-            type: terminal
+          targetPort: 3000 
+      mountSources: true
   - container:
+      name: "tools"
       image: quay.io/eclipse/che-nodejs10-ubi:nightly
       mountSources: true
-      name: "tools"
       memoryLimit: 1024Mi
 commands:
   - exec:
       id: myPostStart
       commandLine: echo I am a PostStart
       component: tools
-      workingDir: ${CHE_PROJECTS_ROOT}/
+      workingDir: /
   - exec:
       id: secondPostStart
       commandLine: echo I am also a PostStart
       component: runtime
-      workingDir: ${CHE_PROJECTS_ROOT}/
+      workingDir: /
   - exec:
-      id: download dependencies
-      commandLine: "npm install"
+      id: devbuild
       component: runtime
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-web-app/app
+      commandLine: npm install
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      group:
+        kind: build
+        isDefault: true
+  - exec:
+      id: build
+      component: runtime
+      commandLine: npm install
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: build
   - exec:
-      id: run the app
-      commandLine: "nodemon app.js"
+      id: devrun
       component: runtime
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-web-app/app 
+      commandLine: npm start
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
-        kind: run                              
+        kind: run
+        isDefault: true
+  - exec:
+      id: run
+      component: runtime
+      commandLine: npm start
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      group:
+        kind: run
 events:
   postStart:
-   - "myPostStart" 
-   - "secondPostStart"
+    - "myPostStart" 
+    - "secondPostStart"
