--- a/.travis.yml
+++ b/.travis.yml
@@ -124,7 +124,7 @@ jobs:
       # scenario of docker devfile url testing needs only Kube config file. So the test has been
       # added here just to make sure docker devfile url command test gets a proper kube config file.
       # without creating a separate OpenShift cluster.
-      name: "devfile catalog, create, push, delete, registry, log and docker devfile url command integration tests"
+      name: "devfile catalog, create, push, delete, registry, exec, log and docker devfile url command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make bin
@@ -139,6 +139,7 @@ jobs:
         - travis_wait make test-cmd-devfile-delete
         - travis_wait make test-cmd-devfile-registry
         - travis_wait make test-cmd-devfile-log
+        - travis_wait make test-cmd-devfile-exec
         - odo logout
 
     - <<: *base-test
@@ -157,7 +158,7 @@ jobs:
     
     - <<: *base-test
       stage: test
-      name: "docker devfile push, watch, catalog and delete command integration tests"
+      name: "docker devfile push, watch, catalog, exec and delete command integration tests"
       script:
         - make bin
         - sudo cp odo /usr/bin
@@ -166,11 +167,12 @@ jobs:
         - travis_wait make test-cmd-docker-devfile-catalog
         - travis_wait make test-cmd-docker-devfile-delete
         - travis_wait make test-cmd-docker-devfile-url
+        - travis_wait make test-cmd-docker-devfile-exec
 
     # Run devfile integration test on Kubernetes cluster    
     - <<: *base-test
       stage: test
-      name: "devfile catalog, watch, push, debug, delete, log and create command integration tests on kubernetes cluster"
+      name: "devfile catalog, watch, push, debug, delete, exec, log and create command integration tests on kubernetes cluster"
       env:
         - MINIKUBE_WANTUPDATENOTIFICATION=false
         - MINIKUBE_WANTREPORTERRORPROMPT=false
@@ -197,6 +199,7 @@ jobs:
         - travis_wait make test-cmd-devfile-watch
         - travis_wait make test-cmd-devfile-push
         - travis_wait make test-cmd-devfile-debug
+        - travis_wait make test-cmd-devfile-exec
         - travis_wait make test-cmd-devfile-delete
         - travis_wait make test-cmd-devfile-create
         - travis_wait make test-cmd-devfile-log
