--- a/tests/examples/source/devfiles/nodejs/devfile-with-multiple-defaults.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-multiple-defaults.yaml
@@ -56,7 +56,7 @@ commands:
   - exec:
       id: singleenv
       component: runtime
-      commandLine: "mkdir $ENV1"
+      commandLine: mkdir $ENV1
       env:
        - name: ENV1
          value: "test_env_variable"
@@ -66,12 +66,22 @@ commands:
   - exec:
       id: multipleenv
       component: runtime
-      commandLine: "mkdir $ENV1 $ENV2"
+      commandLine: mkdir $ENV1 $ENV2
       env:
        - name: ENV1
          value: "test_env_variable1"
        - name: ENV2
          value: "test_env_variable2"
+      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
+      group:
+        kind: run
+  - exec:
+      id: envwithspace
+      component: runtime
+      commandLine: mkdir "$ENV1"
+      env:
+       - name: ENV1
+         value: "env with space"
       workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: run
