--- a/tests/examples/source/devfiles/nodejs/devfileCompositeCommands.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfileCompositeCommands.yaml
@@ -45,8 +45,8 @@ commands:
         kind: run
         isDefault: true
   - composite:
-         id: buildAndEcho
-         label: Build and Echo
+         id: buildAndMkdir
+         label: Build and Mkdir
          commands:
            - mkdir
            - install
