--- a/tests/examples/source/devfiles/nodejs/devfileNestedCompCommands.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfileNestedCompCommands.yaml
@@ -48,7 +48,7 @@ commands:
          id: nestedcommand
          label: Build and Echo
          commands:
-           - buildAndEcho
+           - buildAndMkdir
            - install
          parallel: true
          group: 
