Odo test cmd for devfile 2.0 (#3400)
* first commit to save change

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* able to run odo test

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add test in adapters

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* test works

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add integration test

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix integration test

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* address code review comments

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* remove comments

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add more tests

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix some typo

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* remove content added by mistake

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* update error message, and the integration test

* address review comments

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* simplify the error return

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* test command should have 0 args

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add test in the docker test description

* modify trivis.yaml file

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-testgroup.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-testgroup.yaml
@@ -10,16 +10,10 @@ components:
       name: runtime
       image: registry.access.redhat.com/ubi8/nodejs-12:1-36
       memoryLimit: 1024Mi
-      endpoints:
-        - name: "3000/tcp"
-          configuration:
-            protocol: tcp
-            scheme: http
-          targetPort: 3000
       mountSources: true
 commands:
   - exec:
-      id: firstbuild
+      id: devbuild
       component: runtime
       commandLine: npm install
       workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
@@ -27,32 +21,13 @@ commands:
         kind: build
         isDefault: true
   - exec:
-      id: secondbuild
+      id: devrun
       component: runtime
-      commandLine: npm install
+      commandLine: npm start
       workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
-        kind: build
+        kind: run
         isDefault: true
-  - exec:
-      id: thirdbuild
-      component: runtime
-      commandLine: npm install
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
-  - exec:
-      id: firstrun
-      component: runtime
-      commandLine: npm start
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
-      group:
-        kind: run
-  - exec:
-      id: secondrun
-      component: runtime
-      commandLine: npm start
-      workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
-      group:
-        kind: run
   - exec:
       id: test1
       component: runtime
@@ -68,4 +43,3 @@ commands:
       workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: test
-        isDefault: true
