Integration test for composite test commands
Signed-off-by: John Collier <John.J.Collier@ibm.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-testgroup.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-testgroup.yaml
@@ -43,3 +43,12 @@ commands:
       workingDir: ${CHE_PROJECTS_ROOT}/nodejs-starter
       group:
         kind: test
+  - composite:
+         id: compositetest
+         label: Build and Mkdir
+         commands:
+           - test1
+           - test2
+         parallel: false
+         group: 
+            kind: test
